Fixed alignment issue in bold fix.

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -204,6 +204,7 @@
 {
     margin-right: auto;
     display: flex;
+    align-items: flex-start;
     flex-direction: column;
     justify-content: center;
 }
